Updates after day 2 of 2

--- a/www/flags/index.css
+++ b/www/flags/index.css
@@ -19,7 +19,16 @@ body{
 
 #bucket a,
 #bucket div,
-#bucket li{
+#bucket ul * {
   display:block;
   color:red;
+}
+
+#bucket li, #bucket li * {
+  color: green;
+}
+
+#bucket li p {
+  margin: 0;
+  padding: 0;
 }
